[package]
name = "tx-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
libzeropool-rs = "0.9.1"
rand = "0.7.3"
serde = "1.0.156"
serde_json = "1.0.94"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
