[package]
name = "tx-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
libzeropool-rs = { version = "0.9.1", features = ["multicore"] }
rand = "0.7.3"
serde = "1.0.156"
bip32 = "0.4.0"
bip39 = "2.0.0"
serde_json = "1.0.94"
web3 = "0.18.0"
secp256k1 = "0.21.2"
bpaf = {  version = "0.7.10", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
